--- a/notes/adjectives/norming-model.qmd
+++ b/notes/adjectives/norming-model.qmd
@@ -33,7 +33,7 @@ $$
 
 Our first model addresses a fundamental question: how do we infer the "shape" of people's prior beliefs about the degrees that gradable adjectives operate on? The norming study provides a clean test case where participants directly report degrees on scales.
 
-We'll start with a realistic model of the norming data that one might design as a means for analyzing that dataset. What we'll do is to build up the model block-by-block, explaining each line. Then, we'll turn to how we might analyze this experiment using PDS and show which components of this model correspond to the PDS kernel model and which are extensions by the analyst.
+We'll start with a realistic model of the norming data that one might design as a means for analyzing that dataset. What we'll do is to build up the model block-by-block, explaining each line. Then, we'll turn to how we might analyze this experiment using PDS and show which components of this model correspond to the PDS kernel model and which ones are extensions of the model by the analyst.
 
 ## Understanding the experimental setup
 
@@ -131,7 +131,9 @@ parameters {
   vector[N_item] mu_guess;
 ```
 
-This declares a vector of "guesses" (degrees) for each item. Why `mu_guess`? In statistics, μ (mu) traditionally denotes a mean or central tendency. These represent our best guess about each item's true degree on its scale—the theoretical degrees that the semantic analysis posits.
+This declares a vector of "guesses" (degrees) for each item. Why `mu_guess`? In statistics, μ (mu) traditionally denotes a mean or central tendency. These means can be understood as representing our best guess, as researchers, about each item's true degree on its scale---the theoretical degrees that the semantic analysis posits.
+Crucially, they can also be viewed as representing subjects' uncertainty about these degrees---what unresolved uncertainty do they maintain when they make these guesses?
+
 
 But people differ! We need random effects to capture individual variation:
 
@@ -364,9 +366,13 @@ This code:
 
 1. Asserts that Jo is a soccer player (establishing context)
 2. Asks "how tall is Jo?" using the degree-argument version of the adjective
-3. Applies beta and delta reduction rules via `betaDeltaNormal`
+3. Applies beta and delta-reduction rules via `betaDeltaNormal`
 4. Uses `scaleNormingPrior` to generate prior distributions
 5. Applies `adjectivesRespond` to specify the response function
+
+Note the use of certain convenience functions.
+For example, `getSemantics` retrieves one of the meanings (in the λ-calculus) for the expression it is given as a string of strings, using the parser implemented at [`Grammar.Parser`](https://juliangrove.github.io/pds/Grammar-Parser.html).
+The other functions, [`termOf`](https://juliangrove.github.io/pds/Lambda-Types.html#v:termOf), [`ty`](https://juliangrove.github.io/pds/Lambda-Types.html#v:ty), and [`tau`](https://juliangrove.github.io/pds/Lambda-Convenience.html#v:tau) serve as basic plumbing and can be found in the documentation.
 
 ### Working through degree questions
 
@@ -396,28 +402,33 @@ instance Interpretation Adjectives SynSem where
       ...
 ```
 
-### Delta rules and semantic computation
+### delta-rules and semantic computation
 
-PDS applies delta rules to simplify these complex λ-terms. As discussed in [the implementation section](../pds-intro/implementation.md), delta rules enable different semantic computations while preserving semantic equivalence. The formalism is strongly normalizing and confluent, so the order of rule application doesn't affect the final result—a crucial property that ensures our semantic theory remains consistent.
+PDS applies delta-rules to simplify these complex λ-terms. As discussed in [the implementation section](../pds-intro/implementation.md), delta-rules enable different semantic computations while preserving semantic equivalence. The formalism is strongly normalizing and confluent, so the order of rule application doesn't affect the final result—a crucial property that ensures our semantic theory remains consistent.
 
-Key delta rules for adjectives include:
+Key delta-rules for adjectives include:
 - **Arithmetic operations**: Simplifying comparisons like $\ct{(≥)}$ when applied to constants
 - **State/index extraction**: Rules for $\ct{height}$, $\ct{d\_tall}$, etc.
 - **Beta reduction**: Standard λ-calculus reduction
 
 These rules transform the complex compositional semantics into simpler forms suitable for compilation to Stan. The transformation preserves the semantic content while making it computationally tractable.
 
-### Working through delta reductions
+### Working through delta-reductions
 
-Having seen the PDS code for degree questions, we now trace through how delta rules transform these complex λ-terms into forms suitable for Stan compilation. Delta rules, as introduced in [`Lambda.Delta`](https://juliangrove.github.io/pds/Lambda-Delta.html), are partial functions from terms to terms that implement semantic computations.
+Having seen the PDS code for degree questions, we now trace through how delta-rules transform these complex λ-terms into forms suitable for Stan compilation. delta-rules, as introduced in [`Lambda.Delta`](https://juliangrove.github.io/pds/Lambda-Delta.html), are partial functions from terms to terms that implement semantic computations.
 
 For degree questions like *how tall is Jo?*, the compositional semantics produces:
 
 $$
-\ct{Return}(\iota(\lambda d[\ct{height}(i)(j) = d]))
+λd, i.\ct{height}(i)(j) ≥ d
 $$
 
-This term undergoes several delta reductions. First, the `indices` rule extracts the height value from the discourse state. From [`Lambda.Delta`](https://juliangrove.github.io/pds/Lambda-Delta.html):
+When $\abbr{respond}$ comes into the picture, some index $i^{\prime}$ is sampled from the common ground, and the maximal answer to the question is determined to be:
+
+$$
+\ct{max}(λd.\ct{height}(i^{\prime})(j) ≥ d)
+$$
+This term undergoes several delta-reductions. First, the `indices` rule extracts the height value from whatever actual index is sampled from the common ground of the current discourse state. From [`Lambda.Delta`](https://juliangrove.github.io/pds/Lambda-Delta.html):
 
 ```haskell
 indices :: DeltaRule
@@ -429,17 +440,22 @@ indices = \case
   _                      -> Nothing
 ```
 
-Applied to our term, this yields:
+Calling this height value $h$, this rule yields:
 
 $$
-\ct{Return}(\iota(\lambda d[h = d]))
+\ct{max}(λd.h ≥ d)
 $$
 
-where $h$ represents Jo's actual height at index $i$. The $\iota$ operator then extracts this unique value, giving us:
+where $h$ represents Jo's actual height at index $i$. The $\ct{max}$ operator then extracts this unique value using the following delta-rule:
 
-$$
-\ct{Return}(h)
-$$
+```haskell
+maxes :: DeltaRule
+maxes = \case
+   Max (Lam y (GE x (Var y'))) | y' == y -> Just x
+   _                                     -> Nothing  
+```
+
+This gives us $h$.
 
 This final form directly corresponds to the Stan parameter we need to infer—the degree on the height scale.
 
@@ -448,10 +464,10 @@ This final form directly corresponds to the Stan parameter we need to infer—th
 The challenge is translating abstract semantic computations into Stan's parameter space. This translation embodies (some of) our linking hypothesis between semantic competence and performance.
 
 1. **Degree extraction becomes parameter inference**:
-   - $\iota(\lambda d[\ct{height}(i)(j) = d])$ → Infer parameter `height_jo`
+   - $\ct{max}(λd.\ct{height}(i)(j) ≥ d)$ → Infer parameter `height_jo`
    - The unique degree satisfying the equation becomes a parameter to estimate
 
-2. **Functions become data structures**:
+2. **Functions become arrays**:
    - $\ct{height} : \iota \to e \to r$ → Array `height[person]`
    - Function application → Array indexing
 
@@ -462,10 +478,10 @@ The challenge is translating abstract semantic computations into Stan's paramete
 4. **The monad becomes Stan's target**:
    - The $\Do$-notation structures sequential computation:
      
-     $\begin{array}[t]{rl}
-     \Do & x ← \ct{return}(5) \\
-         & y ← \ct{normal}(x, 1) \\
-         & \ct{return}(y)
+     $\begin{array}[t]{l}
+     x ∼ \ct{normal}(0, 1) \\
+	 y ∼ \ct{normal}(x, 1) \\
+     \pure{y}
      \end{array}$
 
    - This determines Stan's log probability
@@ -479,11 +495,11 @@ discourse' = ty tau $ assert s1' >>> ask q1'
 scaleNormingExample = asTyped tau (betaDeltaNormal deltaRules . adjectivesRespond scaleNormingPrior) discourse'
 ```
 
-**Delta reductions:**
+**delta-reductions:**
 
-1. Parse "how tall jo is" → $\ct{Return}(\iota(\lambda d[\ct{height}(i)(j) = d]))$
-2. Apply `indices` rule → $\ct{Return}(\iota(\lambda d[h = d]))$ 
-3. Apply iota extraction → $\ct{Return}(h)$
+1. Parse the answer to "how tall jo is" → $\ct{max}(λd.\ct{height}(i)(j) ≥ d)$
+2. Apply `indices` rule → $\ct{max}(λd.h ≥ d)$ 
+3. Apply $\ct{max}$ extraction → $h$
 4. Monadic structure maps to Stan parameter inference
 
 **Kernel output:**^[Actual PDS output: `model { w ~ normal(0.0, 1.0); target += normal_lpdf(y | w, sigma); }`]
